fix: corrects image stretching on Safari browser GH-8713-backport (#8722)
corrects image stretching on Safari browser

--- a/projects/storefrontstyles/scss/layout/page-templates/_login-page.scss
+++ b/projects/storefrontstyles/scss/layout/page-templates/_login-page.scss
@@ -16,5 +16,9 @@
 
   @include media-breakpoint-down(md) {
     --cx-max-width: 100%;
+
+    button[type='button'] {
+      margin-bottom: 1em;
+    }
   }
 }
